abort fades in volumefadereffect

- format header to not look like the product of a drugged mind
- make members private (?!)
- on fadeTo and setVolume calls abort any ongoing fade (timeline::stop)
- introduce inline abortFade function to reflect what is going on
- introduce setVolumeInternal which is for internal use as this function is
  called when the timeline is running, to update the volume (no
  abort needed)

BUG: 313551